modifying image css to prevent overflow

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -11,7 +11,7 @@
 .bgWrap {
     position: absolute;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     overflow: hidden;
     z-index: -1;
     filter: brightness(50%);
@@ -19,7 +19,7 @@
 .landingContentContainer {
     width: 90%;
     margin:auto;
-    color:white
+    color:white;
 }
 
 .landing h1 {
